# nuvem-brasil

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BOOTSTRAP_REPORT.md  README.md  compose.yaml  justfile  license.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
Nuvem Brasil/: GLOSSARIO.md  GUIA-DO-PROJETO.md  MONORREPO.md  README.md
Nuvem Brasil/Arquitetura/: Decisoes-ADRs.md  README.md  Visao-Geral.md
Nuvem Brasil/Automacao/: BDD.md  CI-CD.md  README.md
Nuvem Brasil/Email/: README.md
Nuvem Brasil/Guias/: Como-Contribuir.md  Para-Desenvolvedores.md  Para-Nao-Desenvolvedores.md  README.md
Nuvem Brasil/Infraestrutura/: Provedores-Cloud.md  README.md  Topologia-de-Rede.md
apps/email-server/tests/from_specs/: test_health_healthcheck.py
docs/: paradigm.md
specs/: README.md
specs/features/email-server/cadastro/: acessibilidade-cadastro.spec.yaml  conta-gratuita-limites.spec.yaml  criar-conta.spec.yaml  senha-fraca.spec.yaml  termos-nao-aceitos.spec.yaml  username-indisponivel.spec.yaml  verificacao-conta.spec.yaml  verificacao-sms.spec.yaml
specs/features/email-server/contatos/: adicionar-contato-email.spec.yaml  adicionar-contato.spec.yaml  contatos-frequentes.spec.yaml  criar-grupo.spec.yaml  editar-contato.spec.yaml  enviar-email-grupo.spec.yaml  excluir-contato.spec.yaml  exportar-contatos.spec.yaml  foto-contato.spec.yaml  importar-contatos.spec.yaml  listar-contatos.spec.yaml  pesquisar-contatos.spec.yaml
specs/features/email-server/envio/: anexar-arquivos.spec.yaml  anexo-excede-limite.spec.yaml  autocompletar-contatos.spec.yaml  compor-email.spec.yaml  confirmacao-envio-multiplos.spec.yaml  continuar-rascunho.spec.yaml  destinatario-invalido.spec.yaml  encaminhar-email.spec.yaml  envio-simples.spec.yaml  formatacao-rica.spec.yaml  multiplos-destinatarios.spec.yaml  responder-email.spec.yaml  responder-todos.spec.yaml  salvar-rascunho.spec.yaml
specs/features/email-server/health/: healthcheck.spec.yaml
specs/features/email-server/inbox/: abrir-email.spec.yaml  download-anexos.spec.yaml  excluir-email.spec.yaml  indicacao-anexos.spec.yaml  listar-caixa-entrada.spec.yaml  marcar-nao-lido.spec.yaml  paginacao.spec.yaml  pesquisa-avancada.spec.yaml  pesquisar-emails.spec.yaml  selecao-multipla.spec.yaml  thread-conversa.spec.yaml  visualizacao-anexos.spec.yaml
specs/features/email-server/login/: autenticacao-2fa.spec.yaml  bloqueio-inatividade.spec.yaml  codigo-2fa-invalido.spec.yaml  codigos-recuperacao.spec.yaml  login-senha.spec.yaml  (+5 more)
specs/invariants/: README.md
specs/kpis/: README.md
specs/schema/: spec_schema.py
specs/slos/: README.md
src/gusmail/: __init__.py
src/gusmail/api/: main.py
tests/from_specs/: test_health_healthcheck.py
tools/: spec_list.py  spec_to_tests.py  spec_validate.py
(+34 files in other folders)
