[project]
name = "nuvem-brasil"
version = "0.1.0"
description = "Monorepo Nuvem Brasil — ferramentas digitais livres para a população brasileira"
authors = [
    { name = "Gustavo Silva", email = "gustavo.rodrigues.cayres@proton.me" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pyyaml",
    "typer",
    "rich",
]

[project.scripts]
email-server = "email_server.api.main:app"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-bdd",
    "httpx",
    "ruff",
    "mypy",
    "pre-commit",
    "hypothesis",
    "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nuvem_brasil", "apps/email-server/src/email_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = false
ignore_missing_imports = false
files = ["apps", "shared", "tools"]

[tool.pytest.ini_options]
testpaths = ["apps"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
